Make more compact to access api keys